# dag3

./: .coverage  README.md  pyproject.toml  requirements.txt  tasks.py  train.dockerfile
.github/workflows/: codecheck.yaml  tests.yaml
dockerfiles/: api.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
models/: model.pth
src/elines_pakke/: data.py  evaluate.py  train.py  visualize.py
src/elines_pakke.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_data.py  test_eline.py  test_model.py
